Bug 496355 - Doesn't load any backend
Summary: Doesn't load any backend
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.11.80
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-16 17:04 UTC by Antonio Rojas
Modified: 2024-11-20 20:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2024-11-16 17:04:00 UTC
cantor is completely broken in 24.12 beta: it doesn't load any backend. 

Terminal output:

Adding additional application library path for Cantor plugins loading "/usr/lib/qt6/plugins"
selected part doesn't exist
Comment 1 Bug Janitor Service 2024-11-16 17:21:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/cantor/-/merge_requests/89
Comment 2 Nicolas Fella 2024-11-19 23:06:21 UTC
Git commit f4d9d13c1780dee104a9a8de6f317f2b58b45bb6 by Nicolas Fella.
Committed on 16/11/2024 at 17:20.
Pushed by sgerlach into branch 'master'.

Fix plugin loading

The install namespace was changed, but the loading code not adjusted

M  +1    -1    src/cantor_part.cpp
M  +1    -1    src/lib/backend.cpp
M  +1    -1    src/lib/panelpluginhandler.cpp

https://invent.kde.org/education/cantor/-/commit/f4d9d13c1780dee104a9a8de6f317f2b58b45bb6
Comment 3 Heiko Becker 2024-11-20 20:32:09 UTC
Git commit 94a64415752d30d898938c2c9b00cd2c49ff6fe1 by Heiko Becker, on behalf of Nicolas Fella.
Committed on 20/11/2024 at 20:26.
Pushed by heikobecker into branch 'release/24.12'.

Fix plugin loading

The install namespace was changed, but the loading code not adjusted
(cherry picked from commit f4d9d13c1780dee104a9a8de6f317f2b58b45bb6)

M  +1    -1    src/cantor_part.cpp
M  +1    -1    src/lib/backend.cpp
M  +1    -1    src/lib/panelpluginhandler.cpp

https://invent.kde.org/education/cantor/-/commit/94a64415752d30d898938c2c9b00cd2c49ff6fe1