Fix plugin loading

The install namespace was changed, but the loading code not adjusted

BUG: 496355